--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -4,46 +4,7 @@ on:
   push
 
 jobs:
-  
-  tests:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '1.8'
-
-    - uses: actions/setup-node@v2.1.5
-      with:
-        node-version: '13.9.x'
-
-    - uses: DeLaGuardo/setup-clojure@3.1
-      with:
-        tools-deps: latest
-
-    - uses: actions/checkout@v2.3.4
-
-    - name: Prepare npm modules for tests
-      run: |
-        npm install ws isomorphic-ws
-
-    - name: Cache clojure dependencies
-      uses: actions/cache@v2.1.4
-      with:
-        path: ~/.m2/repository
-        key: ${{ matrix.clojure }}-clojure-${{ hashFiles('**/deps.edn') }}
-        restore-keys: |
-          ${{ matrix.clojure }}-clojure-
-
-    - name: Compile java classes
-      run: |
-        javac $(find . -name '*.java' -type f)
-
-    - name: Run tests
-      run: |
-        ./bin/kaocha
-
-
+ 
   build:
     runs-on: ubuntu-latest
 
@@ -57,8 +18,8 @@ jobs:
     - name: Prepare node
       uses: actions/setup-node@v2.1.5
       with:
-        # node-version: "18.13"
-        node-version: '13.9.x'
+        node-version: "18.13"
+        # node-version: '13.9.x'
           
     - name: Prepare clojure
       uses: DeLaGuardo/setup-clojure@12.5
@@ -71,12 +32,14 @@ jobs:
       run: "npm install ws isomorphic-ws"
         
     - name: Cache clojure dependencies
-      uses: actions/cache@v2.1.4
+      uses: actions/cache@v3
       with:
-        path: ~/.m2/repository
-        key: ${{ matrix.clojure }}-clojure-${{ hashFiles('**/deps.edn') }}
-        restore-keys: |
-          ${{ matrix.clojure }}-clojure-
+        path: |
+          ~/.m2/repository
+          ~/.gitlibs
+          ~/.deps.clj
+        key: cljdeps-${{ hashFiles('deps.edn') }}
+        restore-keys: cljdeps-
 
     - name: Build java classes
       run: clojure -T:build
