--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,102 +6,54 @@ on:
     - '*'
 
 jobs:
-  clojars-publish:
+  publish:
     runs-on: ubuntu-latest
     steps:
       # useful for Continuous Deployment developing
-    - name: validate if it is refs/tags/
+    - name: Validate tag action
       if: startsWith(github.ref,'refs/tags/') != true
       run: exit 1
-
-    - name: checkout
-      uses: actions/checkout@v2.3.4
+      
+    - name: Checkout
+      uses: actions/checkout@v4
+ 
+    - name: Cache dependencies
+      uses: actions/cache@v4.0.0
       with:
-        fetch-depth: 1
+        path: |
+          ~/.m2/repository
+          ~/.gitlibs
+          ~/.deps.clj
+          ~/.cljs
+          ~/.npm
+        key: npm-${{ hashFiles('deps.edn') }}
+        restore-keys: npm-
 
-    - name: Cache maven dependencies
-      uses: actions/cache@v2.1.4
-      with:
-        path: ~/.m2/repository
-        key: maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          maven-
-
-    - name: Set TAG value from refs/tags/TAG
+    - name: Set TAG value
       run: |
         echo "GIT_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
-    - name: Install java
-      uses: actions/setup-java@v1
+    - name: Prepare java
+      uses: actions/setup-java@v4.0.0
       with:
-        java-version: '1.8'
+        distribution: "zulu"
+        java-version: "21"
 
-    - name: Install clojure
-      uses: DeLaGuardo/setup-clojure@3.1
+    - name: Prepare node
+      uses: actions/setup-node@v4.0.2
       with:
-        tools-deps: 'latest'
+        node-version: "18.13"
 
-    - name: Overwrite pom.xml
-      run: |
-        sed -i 's;<version/>;<version>${{ env.GIT_TAG }}</version>;' pom.xml
-        sed -i 's;<tag/>;<tag>${{ github.sha }}</tag>;' pom.xml
-
-    - name: Compile java classes
-      run: |
-        javac $(find . -name '*.java' -type f)
-
-    - name: Debug pom.xml
-      run: cat pom.xml
-
-    - name: Deploy to Clojars
-      env:
-        CLOJARS_USERNAME: ${{ secrets.CLOJARS_USERNAME }}
-        CLOJARS_PASSWORD: ${{ secrets.CLOJARS_PASSWORD }}
-      run: mvn -s .m2/settings.xml deploy
-
-  npm-publish:
-    runs-on: ubuntu-latest
-    steps:
-      # useful for Continuous Deployment developing
-    - name: validate if it is refs/tags/
-      if: startsWith(github.ref,'refs/tags/') != true
-      run: exit 1
-
-    - name: checkout
-      uses: actions/checkout@v2.3.4
+    - name: Prepare clojure
+      uses: DeLaGuardo/setup-clojure@12.5
       with:
-        fetch-depth: 1
+        cli: latest
 
-    - name: Cache maven dependencies
-      uses: actions/cache@v2.1.4
-      with:
-        path: ~/.m2/repository
-        key: npm-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          npm-
+    - name: Build java classes
+      run: clojure -T:build
 
-    - name: Set TAG value from refs/tags/TAG
-      run: |
-        echo "GIT_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-
-    - name: Install java
-      uses: actions/setup-java@v1
-      with:
-        java-version: '1.8'
-
-    - name: Install clojure
-      uses: DeLaGuardo/setup-clojure@3.1
-      with:
-        tools-deps: 'latest'
-
-    - name: Install NodeJS
-      uses: actions/setup-node@v2.1.5
-      with:
-        node-version: 13.9.x
-
-    - name: Build JS
-      run: |
-        clojure -A:cljs:cljs-build
+    - name: Build minified js
+      run: clojure -M:cljs-build
 
     - name: Prepare package
       run: |
@@ -112,12 +64,12 @@ jobs:
         cp release-js/* npm-package/
         sed -i 's;%version%;${{ env.GIT_TAG }};' npm-package/package.json
 
-    - name: NPM deploy
-      env:
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      run: |
-        npm install -g npm-snapshot
-        echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
-        cd npm-package
-        BUILD_TAG=$(if [[ $GIT_TAG == *SNAPSHOT ]]; then npm-snapshot "$(date +%s)"; else echo "latest"; fi)
-        npm publish --tag $BUILD_TAG
+#    - name: NPM deploy
+#      env:
+#        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+#      run: |
+#        npm install -g npm-snapshot
+#        echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+#        cd npm-package
+#        BUILD_TAG=$(if [[ $GIT_TAG == *SNAPSHOT ]]; then npm-snapshot "$(date +%s)"; else echo "latest"; fi)
+#        npm publish --tag $BUILD_TAG
