--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Prepare node
       uses: actions/setup-node@v4.0.2
       with:
-        node-version: "${NODE_VERSION}"
+        node-version: "${env.NODE_VERSION}"
         registry-url: 'https://npm.pkg.github.com'
         # Defaults to the user or organization that owns the workflow file
         # scope: '@octocat'
