--- a/release-js/package.json
+++ b/release-js/package.json
@@ -17,7 +17,7 @@
         "Kirill Chernyshov (https://github.com/DeLaGuardo)",
         "Anatoly Smolyaninov (https://github.com/zarkone)",
         "xapix.io (https://github.com/xapix-io)",
-        "Protosure (https://github.com/protosure)",
+        "Protosure (https://github.com/protosure)"
     ],
     "bugs": {
         "url": "https://github.com/protosure/axel-f/issues"
